style/base.css
/* user styles */

:root {
    --body-bg-image: url('/asset/img/background/gmcbg.gif');

    /* spacing */
    --padding: 15px;
    --spacing: 20px;
    --shadow-spacing: 6px;
    --min-spacing: 12px;
    --max-width: 900px;
    --sidebar-width: 200px;
    --content-width: calc(var(--max-width) - var(--sidebar-width));

    /* colors */
    --content: rgba(255, 255, 255, 0.68);
    --strong: #19647E;
    --strong-light: #28AFB0;
    --strong-dark: #134a5c;

    /* fonts */
    --mono: 'Meslo LGMDZ Mono', 'Courier New', Courier, monospace;
    --emoji: 'Noto Emoji Light';
}

/* if you have the URL of a font, you can set it below */

@font-face {
    font-family: 'Meslo LGMDZ Mono';
    src: url('/asset/font/MesloLGMDZ/MesloLGMDZNerdFontMono-Regular.ttf');
}

@font-face {
    font-family: 'Noto Emoji Light';
    src: url('/asset/font/NotoEmoji/static/NotoEmoji-Light.ttf');
}

@font-face {
    font-family: Nunito;
    src: url('https://sadhost.neocities.org/fonts/Nunito-Regular.ttf');
}

@font-face {
    font-family: Nunito;
    src: url('https://sadhost.neocities.org/fonts/Nunito-Bold.ttf');
    font-weight: bold;
}

@font-face {
    font-family: Nunito;
    src: url('https://sadhost.neocities.org/fonts/Nunito-Italic.ttf');
    font-style: italic;
}

@font-face {
    font-family: Nunito;
    src: url('https://sadhost.neocities.org/fonts/Nunito-BoldItalic.ttf');
    font-style: italic;
    font-weight: bold;
}

body {
    font-family: 'Nunito', sans-serif;
    margin: 0;
    background-size: 65px;
    color: black;
    background-image: var(--body-bg-image);
}

* {
    box-sizing: border-box;
}

.emoji {
    font-family: var(--emoji);
    float: left;
    font-size: 15px;
}

/* below this line is CSS for the layout */

/* the "container" is what wraps your entire website */
#container {
    max-width: var(--max-width);
    /* this is the width of your layout! */
    /* if you change the above value, scroll to the bottom
        and change the media query according to the comment! */
    margin: var(--min-spacing);
    margin-left: calc(var(--min-spacing) - var(--shadow-spacing));
    margin-top: calc(var(--min-spacing) - var(--shadow-spacing) + 2px);
    /* this centers the entire page */
}

/* the area below is for all links on your page
    EXCEPT for the navigation */
#container a {
    font-weight: bold;
    /* if you want to remove the underline
        you can add a line below here that says:
        text-decoration:none; */
}

#container a:link {
    color: var(--strong);
}

#container a:visited, #container a:active {
    color: var(--strong-light);
    font-weight: normal;
}

#container a:hover {
    color: white;
    background-color: black;
}

.box-container {
    background: var(--content);
    border: 1px solid black;
    box-shadow: var(--strong) var(--shadow-spacing) var(--shadow-spacing);
}

#header {
    display: flex;
    width: 100%;
    height: auto;
    padding: 0 var(--padding) 0 var(--padding);
    margin-bottom: var(--spacing);
}

nav ul {
    list-style-type: none;
    padding: 0;
    font-family: var(--mono);
}

nav#collapsible {
    display: none;
}

nav#leftSidebar {
    display: flex;
    flex-direction: column;
    order: 1;
    width: var(--sidebar-width);
    padding: var(--padding);
    margin-right: var(--spacing);
    font-size: smaller;
    /* this makes the sidebar text slightly smaller */
}

nav#leftSidebar ul a {
    text-decoration: none;
}

nav#leftSidebar ul a li {
    width: 100%;
    padding: 8px;
    padding-top: 2px;
    padding-bottom: 2px;
    margin-bottom: calc(var(--padding) / 2);
    text-align: right;

    color: black;
    background-color: white;
    border: 1px solid black;
}

nav#leftSidebar ul a:nth-child(even) li {
    text-align: left;
}

nav#leftSidebar ul a:nth-child(even) .emoji {
    float: right;
}

nav#leftSidebar ul li:hover, nav#leftSidebar ul li:hover a {
    background: black;
    color: white;
}

.fill-vertical{
    flex-grow: 1;
}

#blinkies img {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

#flex {
    margin-bottom: var(--spacing);
    display: flex;
}

/* this is the color of the main content area,
    between the sidebars! */
main {
    flex: 1;
    order: 2;
}

main .box-container {
    padding: var(--padding);
    margin-bottom: var(--spacing);
}

.inline {
    width: 100%;
    display: flex;
}

.inline * {
    margin-left: var(--spacing);
    width: 50%;
}

.inline *:first-child {
    margin-left: 0;
}

/* what's this "order" stuff about??
    allow me to explain!
    if you're using both sidebars, the "order" value
    tells the CSS the order in which to display them.
    left sidebar is 1, content is 2, and right sidebar is 3! */

#rightSidebar {
    order: 3;
}

footer {
    color: black;

    width: 100%;
    height: auto;
    padding: var(--padding);
    /* margin-top: var(--spacing); */

    display: flex;
}

.footer {
    flex: 1;
}

.footer#version {
    text-align: center;
}

.footer#links {
    text-align: right;
}

h1,
h2,
h3 {
    font-family: var(--mono);
    color: var(--strong);
}

h1 {
    font-size: 25px;
}

strong {
    /* this styles bold text */
    color: var(--strong);
}

/* this is just a cool box, it's the darker colored one */
.box {
    width: 100%;
    border: 1px solid #000000;
    padding: var(--padding);
    margin-bottom: var(--padding);
}

.header-bar {
    background-image: linear-gradient(to right, white 25%, var(--strong-light));
    padding: 0;
    line-height: 0; 
    display: block;
}

.header-bar h1, .header-bar h2, .header-bar h3 {
    color: black;
    margin-left: 5px;
}

/* CSS for extras */

#topBar {
    width: 100%;
    height: 30px;
    padding: 10px;
    font-size: smaller;
    background-color: #13092D;
}


/* BELOW THIS POINT IS MEDIA QUERY */

/* so you wanna change the width of your page? 
    by default, the container width is 900px.
    in order to keep things responsive, take your new height,
    and then subtrack it by 100. use this new number as the 
    "max-width" value below */

@media only screen and (max-width: 800px) {
    #path {
        display: none;
    }

    #primary {
        margin-top: calc(var(--padding) * 2 + 70px);
        overflow-y: hidden;
    }
    
    #flex {
        flex-wrap: wrap;
    }

    /* the order of the items is adjusted here for responsiveness!
        since the sidebars would be too small on a mobile device.
        feel free to play around with the order! */
    nav#leftSidebar {
        display: none;
    }

    /* navigation section!! */
    /* https://www.w3schools.com/howto/howto_css_dropdown_navbar.asp */
    /* The dropdown container */
    nav#collapsible {
        display: block;
        overflow: hidden;
        font-family: var(--mono);
        background-color: var(--strong);
        text-align: right;
        margin: auto 0 auto auto;
        overflow: hidden;
    }

    nav#collapsible ul a li span {
        display: none;
    }

    /* Dropdown button */
    nav#collapsible .dropbtn {
        font-size: 16px;
        border: 1px solid black;
        display: flex;
        /* outline: none; */
        color: white;
        /* padding: 14px 16px; */
        background-color: inherit;
        font-family: inherit; /* Important for vertical align on mobile phones */
        margin: 0; /* Important for vertical align on mobile phones */
        padding: 8px;
    }

    .dropbtn--input {
        display: none;
    }

    /* Dropdown content (hidden by default) */
    .dropdown-content {
        background-color: #FFFFFF;
        box-shadow: var(--strong-dark) var(--shadow-spacing) var(--shadow-spacing);
        display: none;
        position: absolute;
        right: calc(var(--padding) + var(--min-spacing));
        min-width: auto;
        z-index: 1;
    }

    /* Links inside the dropdown */
    .dropdown-content a {
        float: none;
        color: black;
        padding: 12px 16px;
        text-decoration: none;
        display: block;
        text-align: right;
    }

    /* Show the dropdown menu on click */
    .dropbtn--input:checked + .dropdown-content {
        display: block;
    } 

    .inline * {
        width: 100%;
        /* display: block; */
    }
}

@media only screen and (max-width: 675px) {
    footer {
        display: block;
    }

    .footer, .footer#links {
        text-align: center;
    }
}

